// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login handles successful logout 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`login render admin link for admins 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
    <a
      className="c3 c4"
      href="/admin"
      onClick={[Function]}
    >
      Admin
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`login renders correctly 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;
